--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -22,7 +23,7 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.451.0",
     "motion": "^12.23.12",
@@ -35,6 +36,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.13.1",
+    "react-use-measure": "^2.1.7",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
